package projecteInicial;

public class DecoyDuck extends Duck {
	
	public void display() {
		System.out.println("I'm a duck Decoy");
	}
        public void quack() {
		System.out.println("<< Silence >>");
	}
        public void fly() {
		System.out.println("I can't fly");
	}
}
