package projecteInicial;

public class ModelDuck extends Duck {
	
        public void fly() {
		System.out.println("I can't fly");
	}
	public void quack() {
		System.out.println("Quack");
	}
        public void display() {
		System.out.println("I'm a model duck");
	}
}
