@startuml

title __STRATEGYESTUDIANTS's Class Diagram__\n

  package projecteInicial {
    class DecoyDuck {
    }
  }
  

  package projecteInicial {
    abstract class Duck {
    }
  }
  

  package projecteInicial {
    class MallardDuck {
    }
  }
  

  package projecteInicial {
    class MiniDuckSimulator {
    }
  }
  

  package projecteInicial {
    class ModelDuck {
    }
  }
  

  package projecteInicial {
    class RedHeadDuck {
    }
  }
  

  package projecteInicial {
    class RubberDuck {
    }
  }
  

  package projecteInicial {
    class StrategyEstudiants {
    }
  }
  

  DecoyDuck -up-|> Duck
  MallardDuck -up-|> Duck
  ModelDuck -up-|> Duck
  RedHeadDuck -up-|> Duck
  RubberDuck -up-|> Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
